# folio

./: AGENTS.md  APP_REFACTOR_PLAN.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: pages.yml  release.yml
apps/desktop/: package.json  tailwind.config.ts
apps/desktop/public/: splashscreen.html
apps/desktop/src/: App.css  App.tsx  i18n.ts  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: author_metadata.rs  db.rs  lib.rs  models.rs  scanner.rs
apps/desktop/src-tauri/src/parser/: epub.rs  mod.rs
apps/desktop/src/components/: AuthorPhotoImage.tsx  BookCard.tsx  LibraryGrid.tsx  MatchModal.tsx  ProgressBar.tsx  SyncConfirmDialog.tsx
apps/desktop/src/hooks/: useAuthorSuggestions.ts  useBackgroundOperation.ts  useCoverOverrides.ts  useEreader.ts  useLibraryData.ts  useLibraryIssueHandlers.ts  useLibraryOperations.ts  useLibrarySelectors.ts  useMetadataActions.ts  useMetadataSettings.ts  useOperationEventListeners.ts  useOrganizer.ts  usePendingChangeHandlers.ts  useTheme.ts  useUpdater.ts
docs/: apple-books-metadata-provider.md  index.html  latest.json  performance-library-scale-proposal.md  style.css
docs/plans/: 2026-01-29-ereader-sync-design.md  2026-01-29-ereader-sync-implementation.md  2026-02-02-fix-metadata-implementation.md  2026-02-02-fix-metadata-redesign.md  2026-02-05-import-books-design.md  2026-02-05-import-books-implementation.md
scripts/: generate-updater.js
(+44 files in other folders)
