[package]
name = "app"
version = "0.1.21"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2.5"
sha2 = "0.10"
uuid = { version = "1.12", features = ["v4"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
zip = "2.2"
quick-xml = "0.31"
regex = "1.10"
lopdf = "0.32"
reqwest = { version = "0.12", features = ["blocking", "json"] }
urlencoding = "2.1"
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
